RESOLVED FIXED302074
com.apple.WebKit.GPU at WebCore: WebCore::MediaPlayerPrivateWebM::notifyClientWhenReadyForMoreSamples
https://bugs.webkit.org/show_bug.cgi?id=302074
Summary com.apple.WebKit.GPU at WebCore: WebCore::MediaPlayerPrivateWebM::notifyClie...
Jean-Yves Avenard [:jya]
Reported 2025-11-06 04:10:47 PST
``` Thread 0 Crashed:: Dispatch queue: com.apple.main-thread: 0 WebCore 0x1b740e158 WebCore::MediaPlayerPrivateWebM::notifyClientWhenReadyForMoreSamples(unsigned long long) + 316 (/Library/Caches/com.apple.xbs/Sources/WebCore/Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:0) 1 WebCore 0x1b742643c WebCore::MediaPlayerPrivateWebM::didProvideMediaDataForTrackId(WTF::Ref<WebCore::MediaSampleAVFObjC, WTF::RawPtrTraits<WebCore::MediaSampleAVFObjC>, WTF::DefaultRefDerefTraits<WebCore::MediaSampleAVFObjC>>&&, unsigned long long, WTF::String const&) + 84 (/Library/Caches/com.apple.xbs/Sources/WebCore/Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:1238) [inlined] 2 WebCore 0x1b742643c WebCore::MediaPlayerPrivateWebM::MediaPlayerPrivateWebM(WebCore::MediaPlayer*)::$_1::operator()(WTF::Ref<WebCore::MediaSampleAVFObjC, WTF::RawPtrTraits<WebCore::MediaSampleAVFObjC>, WTF::DefaultRefDerefTraits<WebCore::MediaSampleAVFObjC>>&&, unsigned long long, WTF::String const&) const + 420 (/Library/Caches/com.apple.xbs/Sources/WebCore/Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:110) [inlined] 3 WebCore 0x1b742643c WTF::Detail::CallableWrapper<WebCore::MediaPlayerPrivateWebM::MediaPlayerPrivateWebM(WebCore::MediaPlayer*)::$_1, void, WTF::Ref<WebCore::MediaSampleAVFObjC, WTF::RawPtrTraits<WebCore::MediaSampleAVFObjC>, WTF::DefaultRefDerefTraits<WebCore::MediaSampleAVFObjC>>&&, unsigned long long, WTF::String const&>::call(WTF::Ref<WebCore::MediaSampleAVFObjC, WTF::RawPtrTraits<WebCore::MediaSampleAVFObjC>, WTF::DefaultRefDerefTraits<WebCore::MediaSampleAVFObjC>>&&, unsigned long long, WTF::String const&) + 448 (/AppleInternal/Library/BuildRoots/4~CAB1ugAjf7sY0oMKNNhOagu1wAwbjIlotQASrRE/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.3.Internal.sdk/usr/local/include/wtf/Function.h:53) 4 WebCore 0x1b9937a7c WTF::Function<void (WTF::Ref<WebCore::MediaSampleAVFObjC, WTF::RawPtrTraits<WebCore::MediaSampleAVFObjC>, WTF::DefaultRefDerefTraits<WebCore::MediaSampleAVFObjC>>&&, unsigned long long, WTF::String const&)>::operator()(WTF::Ref<WebCore::MediaSampleAVFObjC, WTF::RawPtrTraits<WebCore::MediaSampleAVFObjC>, WTF::DefaultRefDerefTraits<WebCore::MediaSampleAVFObjC>>&&, unsigned long long, WTF::String const&) const + 52 (/AppleInternal/Library/BuildRoots/4~CAB1ugAjf7sY0oMKNNhOagu1wAwbjIlotQASrRE/Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS26.3.Internal.sdk/usr/local/include/wtf/Function.h:82) [inlined] 5 WebCore 0x1b9937a7c WebCore::SourceBufferParserWebM::returnSamples(WebCore::MediaSamplesBlock&&, opaqueCMFormatDescription const*)::$_0::operator()() + 204 (/Library/Caches/com.apple.xbs/Sources/WebCore/Source/WebCore/platform/graphics/cocoa/SourceBufferParserWebM.cpp:1600) [inlined] ``` rdar://163061241
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2025-11-06 05:19:23 PST
EWS
Comment 2 2025-11-06 12:43:05 PST
Committed 302672@main (64f63548cbdb): <https://commits.webkit.org/302672@main> Reviewed commits have been landed. Closing PR #53520 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.