com.apple.WebKit.GPU at WebCore:  WebCore::MediaPlayerPrivateWebM::notifyClientWhenReadyForMoreSamples https://bugs.webkit.org/show_bug.cgi?id=302074 rdar://163061241

Reviewed by Youenn Fablet.

If a samples was demuxed from a track not yet activated, it will cause the MediaPlayerPrivateWebM
to use an invalid iterator to retrieve the track number.
This condition will easily occur if the webm had more than 1 track of each kind.

We abort notifyClientWhenReadyForMoreSamples method, if the tracks isn't
enabled yet.

Test: media/media-multi-audio-tracks-webm.html
* LayoutTests/media/content/vp9-opus-good-3tracks.webm: Added.
* LayoutTests/media/media-multi-audio-tracks-webm-expected.txt: Added.
* LayoutTests/media/media-multi-audio-tracks-webm.html: Added.
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.h:
* Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm:
(WebCore::MediaPlayerPrivateWebM::notifyClientWhenReadyForMoreSamples):
(WebCore::MediaPlayerPrivateWebM::isReadyForMoreSamples):
(WebCore::MediaPlayerPrivateWebM::maybeTrackIdentifierFor const):

Canonical link: https://commits.webkit.org/302672@main