Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.h
@@ -280,6 +280,7 @@ private:
 
     using TrackIdentifier = TracksRendererManager::TrackIdentifier;
     TrackIdentifier trackIdentifierFor(TrackID) const;
+    std::optional<TrackIdentifier> maybeTrackIdentifierFor(TrackID) const;
 
     void setLayerRequiresFlush();
     void setAllTracksForReenqueuing();
